Revamps dd css to self contained mode

--- a/lib/dedalo/dd/css/dd_list.less
+++ b/lib/dedalo/dd/css/dd_list.less
@@ -1,6 +1,10 @@
+
+
+
 #wrapGeneral {
   border: none;
   width: 100%;
+	font-size: initial;
 }
 #wrapGeneral table {
   width: 100%;
@@ -53,7 +57,7 @@ input[type="button"] {
   padding-top: 0px;
   border: none;
   border-radius: 3px;
-  background-image: url('../../themes/default/th_ramp2.png');
+  background-image: url('../../dd/images/th_ramp2.png');
   background-position: 0 -1px;
   cursor: pointer;
 }
@@ -85,7 +89,7 @@ select {
   border: none;
   border-radius: 3px;
   box-shadow: 1px 2px 2px #888888;
-  background-image: url('../../themes/default/ramp_orange.jpg') !important;
+  background-image: url('../../dd/images/ramp_orange.jpg') !important;
   padding-left: 4px;
   padding-right: 4px;
 }
@@ -127,8 +131,8 @@ select {
 #SelectLangList:focus {
   width: 80px !important;
 }
-/********************  
-* TESAURO JERÁRQUICO 
+/********************
+* TESAURO JERÁRQUICO
 ********************/
 #tesauro_content {
   font-size: 11px;
@@ -224,7 +228,7 @@ select {
   margin-bottom: 2px;
   text-align: left;
   background-color: #afafaf;
-  background-image: url('../../themes/default/th_ramp.png');
+  background-image: url('../../dd/images/th_ramp.png');
   border: 0px;
   border-style: inset;
   border-color: #DBDBDB;
@@ -264,7 +268,7 @@ select {
 }
 #tsTreeLOAD .tsHeader_modelo {
   background-color: #afafaf;
-  background-image: url('../../themes/default/th_ramp3.png');
+  background-image: url('../../dd/images/th_ramp3.png');
 }
 /* FIN TESAURO JERÁRQUICO */
 .nOrden {
@@ -376,7 +380,7 @@ table.table_list_ts_used td {
   color: #ffffff;
 }
 .icon-help {
-  background-image: url('../../themes/default/icon-help.gif');
+  background-image: url('../../dd/images/icon-help.gif');
   width: 12px;
   height: 12px;
   margin: 0;
@@ -385,7 +389,7 @@ table.table_list_ts_used td {
   cursor: pointer;
 }
 .bullet_mas {
-  background-image: url('../../themes/default/bullet_mas.png');
+  background-image: url('../../dd/images/bullet_mas.png');
   width: 18px;
   height: 18px;
   display: inline-block;
@@ -394,7 +398,7 @@ table.table_list_ts_used td {
   cursor: pointer;
 }
 .icon_delete {
-  background-image: url('../../themes/default/delete.png');
+  background-image: url('../../dd/images/delete.png');
   width: 12px;
   height: 13px;
   display: inline-block;
@@ -402,7 +406,7 @@ table.table_list_ts_used td {
   cursor: pointer;
 }
 .icon_edit {
-  background-image: url('../../themes/default/edit_grey.png');
+  background-image: url('../../dd/images/edit_grey.png');
   width: 15px;
   height: 15px;
   display: inline-block;
@@ -412,7 +416,7 @@ table.table_list_ts_used td {
   vertical-align: text-top;
 }
 .tesauro_button_show_tr {
-  background-image: url('../../themes/default/tr-icon.gif');
+  background-image: url('../../dd/images/tr-icon.gif');
   width: 15px;
   height: 14px;
   display: inline-block;
@@ -422,7 +426,7 @@ table.table_list_ts_used td {
   position: relative;
 }
 .icon-mostrar-def {
-  background-image: url('../../themes/default/q.gif');
+  background-image: url('../../dd/images/q.gif');
   width: 15px;
   height: 14px;
   display: inline-block;
@@ -431,7 +435,7 @@ table.table_list_ts_used td {
   position: relative;
 }
 .mostrar-modelo {
-  background-image: url('../../themes/default/m-icon.gif');
+  background-image: url('../../dd/images/m-icon.gif');
   width: 15px;
   height: 14px;
   display: inline-block;
@@ -441,7 +445,7 @@ table.table_list_ts_used td {
   position: relative;
 }
 .mostrar-obs {
-  background-image: url('../../themes/default/o-icon.gif');
+  background-image: url('../../dd/images/o-icon.gif');
   width: 15px;
   height: 14px;
   display: inline-block;
@@ -451,7 +455,7 @@ table.table_list_ts_used td {
   position: relative;
 }
 .mostrar-nd {
-  background-image: url('../../themes/default/nd.gif');
+  background-image: url('../../dd/images/nd.gif');
   width: 15px;
   height: 14px;
   display: inline-block;
@@ -461,7 +465,7 @@ table.table_list_ts_used td {
   position: relative;
 }
 .add_index_btn {
-  background-image: url('../../themes/default/icon_go1.png');
+  background-image: url('../../dd/images/icon_go1.png');
   width: 16px;
   height: 16px;
   display: inline-block;
