--- a/lib/dedalo/dd/css/legacy/general.less
+++ b/lib/dedalo/dd/css/legacy/general.less
@@ -5,23 +5,23 @@
 calabaza logo: #e57400
 */
 /* font face test
-@font-face {  
-	font-family: myFont ;  
+@font-face {
+	font-family: myFont ;
 	src: url( ../lib/fonts/truetype/futura.ttf ) format("truetype");
 }
 */
 html {top:0; margin-top:0; height:100% }
 html, body { background-color:#d9d9d9; }
 body {
- /*background-image: url(../../../../../images/fondo.png);*/ 
+ /*background-image: url(../../images/fondo.png);*/
  /*background-repeat: repeat-x;*/
  top:0; left:0;
- background-image:url("../../../../../images/bg_noise.jpg");
+ background-image:url("../../images/bg_noise.jpg");
  margin-left: 0px;
  margin-top: 0px;
  margin-right: 0px;
  margin-bottom: 0px;
- 
+
  height:100% !important; /*important*/
 }
 body,td,th { font-family: Verdana,Arial,Helvetica,sans-serif; font-size:11px;color:#3C3C3C;}
@@ -48,7 +48,7 @@ input {
   border-radius:3px;
   padding: 2px;
   margin: 2px;
-  color: #666666;  
+  color: #666666;
 }
 
 [disabled],[readonly] {	background-color:#CCC; }
@@ -69,11 +69,11 @@ select {
 	border: 1px solid #CCCCCC;
 	padding: 2px;
     color: #333333;
-  	border-radius:3px;	
+  	border-radius:3px;
 }
 input[type="checkbox"] { cursor:pointer ; margin-bottom:5px;}
 
-input[type=button]{ color:#F7F7F7;height:21px;padding:3px; padding-left:5px; padding-right:5px; padding-top:0px;border:none;border-radius:3px;background-image:url(../../../../../images/th_ramp2.png);background-position:0 -1px;cursor:pointer; }
+input[type=button]{ color:#F7F7F7;height:21px;padding:3px; padding-left:5px; padding-right:5px; padding-top:0px;border:none;border-radius:3px;background-image:url(../../images/th_ramp2.png);background-position:0 -1px;cursor:pointer; }
 input[type=button]:hover { color:#fff }
 .SubmitButon{
 cursor:pointer;
@@ -83,7 +83,7 @@ color:#FFF ;
 border:none;
 border-radius:3px;
 box-shadow: 1px 2px 2px #888888;
-background-image: url(../../../../../images/deco/ramp_orange.jpg) !important;
+background-image: url(../../images/deco/ramp_orange.jpg) !important;
 padding-left:4px; padding-right:4px;
 }
 
@@ -127,31 +127,31 @@ padding-left:4px; padding-right:4px;
 	padding-bottom: 10px;
 }
 .nordenClass{
-	font-size:8px; 
+	font-size:8px;
 	color: #999;
 	color:#C30
 }
 
 .errorMsg{
-	padding:15px; 
-	font-family:Verdana, Geneva, sans-serif; 
-	font-size:12px; 
+	padding:15px;
+	font-family:Verdana, Geneva, sans-serif;
+	font-size:12px;
 	color:#C00;
 	background-color:#F90
 }
 .anadirMunicipiosLink { margin-left:10px; height:16px; width:120px; display:inline-block; vertical-align: middle }
 
-.spinner{ width:100%; height:92%;padding: 10px 0px;background: url(../../../../../images/spinner.gif) no-repeat center;}
-.spinnerTS{background-image: url(../../../../../images/spinner.gif);background-repeat: no-repeat;background-position: left;	margin-left: 65px;padding-top:10px;height:22px;}
+.spinner{ width:100%; height:92%;padding: 10px 0px;background: url(../../images/spinner.gif) no-repeat center;}
+.spinnerTS{background-image: url(../../images/spinner.gif);background-repeat: no-repeat;background-position: left;	margin-left: 65px;padding-top:10px;height:22px;}
 
-.municipioBusqueda { 
-	background-image:url(../../../../../images/iconos/lupaInput.png); 
-	background-position:left; 
-	background-repeat:no-repeat; 
+.municipioBusqueda {
+	background-image:url(../../images/iconos/lupaInput.png);
+	background-position:left;
+	background-repeat:no-repeat;
 	background-color: #ebebeb;
-	width:97%; 
+	width:97%;
 	padding-left:17px;
-	height:20px;	
+	height:20px;
 	vertical-align:middle;
   	border-radius:12px;
 }
@@ -195,7 +195,7 @@ padding-left:4px; padding-right:4px;
 	padding-top:30px;
 	background-color:#CCC;
 	cursor:pointer;
-	background-image:url(../../../../../images/iconos/pdf_icon.png);
+	background-image:url(../../images/iconos/pdf_icon.png);
 	background-repeat:no-repeat;
 	background-position:5px;
 
@@ -212,11 +212,11 @@ padding-left:4px; padding-right:4px;
 
 
 
-#footer table { 
-	background-color:#000 ;	
+#footer table {
+	background-color:#000 ;
 	box-shadow : 0px 0px 8px #888888;
 	margin-top:15px;
-	font-weight:100;	
+	font-weight:100;
 }
 #footer #footerDebug { color:#666 !important; line-height:1.2em; padding:5px; cursor:pointer}
 #footer #footerDebug #footerQueryDebug { margin:0px !important; position:absolute; top:0px; left:-2px; width:100%; background-color:#222;opacity:0.98}
