--- a/lib/dedalo/menu/css/menu.less
+++ b/lib/dedalo/menu/css/menu.less
@@ -63,6 +63,8 @@ background-color: #FFFF00;
 	font-family: "Oxygen-light", sans-serif;
 	font-size: 0.84em;
     line-height: 1.2em;
+
+    color: green;
 	}
 
 	.menu_wrapper_debug {
