--- a/lib/dedalo/page/css/main.less
+++ b/lib/dedalo/page/css/main.less
@@ -9,8 +9,8 @@
 
 // groupers
 	/**/
-	@import "../../section_group/css/section_group.less";
-	@import "../../section_tab/css/section_tab.less";
+	//@import "../../section_group/css/section_group.less";
+	//@import "../../section_tab/css/section_tab.less";
 
 // services
 	@import "../../inspector/css/inspector.less";
