--- a/lib/dedalo/dd/css/dd_edit.less
+++ b/lib/dedalo/dd/css/dd_edit.less
@@ -1,4 +1,5 @@
-/* CSS Document */
+
+
 * {
   padding: 0;
   margin: 0;
@@ -22,23 +23,24 @@ input, textarea {
 	min-height: 520px;
 	text-align: center;
 	margin-bottom: 20px;
+	font-size: initial;
 	}
 	#wrapGeneral table.table_edit {
 		width:697px;
 		/*min-height: 600px;*/
-		/*display: table;*/		
+		/*display: table;*/
 	}
-	#wrapGeneral table.table_edit .td_header {		
+	#wrapGeneral table.table_edit .td_header {
 		height: 1em;
 	}
 
 #form1 {
-	display: table;	
+	display: table;
 }
 
-#SelectLangList { 
-	width:50px; 
-	margin-left:2px; 
+#SelectLangList {
+	width:50px;
+	margin-left:2px;
 	height:20px !important;
 }
 
@@ -58,7 +60,7 @@ input, textarea {
 
 .wraper_propiedades {
 	width: 100%;
-	height: 42vh; 
+	height: 42vh;
 	//background-color: #ccca76;
 	}
 	.wraper_propiedades .propiedades_label {
@@ -72,12 +74,12 @@ input, textarea {
 		color: #7f7f7f;
 		width: 100%;
 	}
-	
 
 
 
 
-#terminosTable { width:100%;border-collapse:collapse; }	
+
+#terminosTable { width:100%;border-collapse:collapse; }
 #terminosTable th { text-align:left; background-color:#505050; color:#CCCCCC; padding:3px; text-transform:capitalize }
 #terminosTable td {padding:3px; }
 
@@ -91,10 +93,10 @@ input, textarea {
 		height:100px;
 		padding-top: 7px;
 		}
-		.div_spinner_relations .spinner {		
+		.div_spinner_relations .spinner {
 			width:100%;
-			padding: 5px;	
-		    background: url(../../images/spinner.gif) no-repeat center;
+			padding: 5px;
+		    background: url(../../dd/images/spinner.gif) no-repeat center;
 		}
 
 .form_buttons {
@@ -115,7 +117,7 @@ input, textarea {
 	border-bottom-color: #FFF;
 }
 .row_border_bottom td {
-	padding:6px;	
+	padding:6px;
 }
 
 .div_wraper{ width:650px;}
@@ -126,12 +128,12 @@ input, textarea {
 /* JSON EDITOR
 --------------------------------------------- */
 #editor_json {
-	// height:277px; 
-	height:100%;	
+	// height:277px;
+	height:100%;
 	width:100%;
 	text-align:left;
-	@media screen and (min-height: 970px) {		
-		//height:440px;	
+	@media screen and (min-height: 970px) {
+		//height:440px;
 	}
 }
 
