--- a/lib/dedalo/page/css/layout/page.less
+++ b/lib/dedalo/page/css/layout/page.less
@@ -30,7 +30,7 @@ html {
 // active. selected_wrap
 	.active {
 		//transition: background-color 0.3s ease;
-		background-color: rgb(230, 230, 230) !important;
+		background-color: @color_grey_medium !important; // rgb(230, 230, 230)
 	}
 // error
 	.error {
