--- a/lib/dedalo/page/css/layout/paginator.less
+++ b/lib/dedalo/page/css/layout/paginator.less
@@ -49,23 +49,26 @@
 
 				.paginator_first_icon {
 					//background-image: url('../../themes/default/icons/backward.svg');
-					background-image: url('../../themes/default/icons/forward.svg');
+					//background-image: url('../../themes/default/icons/forward.svg');
+					.background_icon('forward.svg');
 					transform: scaleX(-1);
 					background-size: 80%;
 				}
 
 				.paginator_prev_icon {
-					background-image: url('../../themes/default/icons/play.svg');
+					//background-image: url('../../themes/default/icons/play.svg');
+					.background_icon('play.svg');
 					transform: scaleX(-1);
 				}
 
 				.paginator_next_icon {
-
-					background-image: url('../../themes/default/icons/play.svg');
+					//background-image: url('../../themes/default/icons/play.svg');
+					.background_icon('play.svg');
 				}
 
 				.paginator_last_icon {
-					background-image: url('../../themes/default/icons/forward.svg');
+					//background-image: url('../../themes/default/icons/forward.svg');
+					.background_icon('forward.svg');
 					background-size: 80%;
 				}
 
