--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -1108,7 +1108,7 @@
 		& ~ .display_none.remove {
 			.display_block;
 			position: absolute;
-			right: 0.25em;
+			right: 1em;
 			top: 0.20em;
 		}
 	}
@@ -1440,9 +1440,11 @@
 		background-color: #fff;
 		margin-right: .25em;
 		padding: .5em;
+		padding-right: 1em;
 		min-height: 8em;
 		overflow: auto;
 		max-height: 14em;
+		word-break: break-word;
 		//margin-top: 1.5em;
 
 
