Replace the DEDALO_MEDIA_PATH and DEDALO_MEDIA_URL constants

--- a/core/diffusion/diffusion_index_ts/html/diffusion_index_ts_head.phtml
+++ b/core/diffusion/diffusion_index_ts/html/diffusion_index_ts_head.phtml
@@ -88,7 +88,7 @@
 										$html_head .= $component_image->get_html();
 										*/
 									#$img_url 	= DEDALO_IMAGE_FILE_URL . "?m=image&SID=$current_valor&w=102&h=57&fx=crop";
-									$img_url 	= DEDALO_MEDIA_BASE_URL .'/'. DEDALO_IMAGE_FOLDER .'/'. DEDALO_IMAGE_THUMB_DEFAULT . "/{$current_valor}.jpg";
+									$img_url 	= DEDALO_MEDIA_URL .'/'. DEDALO_IMAGE_FOLDER .'/'. DEDALO_IMAGE_THUMB_DEFAULT . "/{$current_valor}.jpg";
 									$html_head .= "<img src=\"$img_url\" class=\"index_ts_thumb\" />$current_valor";
 									#$html_head .= "WORKING HERE [component_image]";
 									break;
