--- a/core/media_engine/html/img.phtml
+++ b/core/media_engine/html/img.phtml
@@ -42,7 +42,7 @@ switch ($m) {
 		break;
 
 	case 'free':
-		$source = DEDALO_MEDIA_BASE_PATH .'/'. $SID;
+		$source = DEDALO_MEDIA_PATH .'/'. $SID;
 		#dump($source, ' source ++ '.to_string());
 		# Thumb obj
 		$thumb = new Thumb($source);
