--- a/core/dd/html/dd_list.phtml
+++ b/core/dd/html/dd_list.phtml
@@ -55,8 +55,10 @@ print css::build_tag(DEDALO_CORE_URL .'/dd/css/dd_list.css', null, false);
 	#dump(js::get_js_link_code(), ' js::get_js_link_code() ++ '.to_string());
 	#echo trim(js::get_js_link_code());
 print js::build_tag(DEDALO_CORE_URL . '/common/js/enviroment.js.php');
-print js::build_tag(JQUERY_LIB_URL_JS);
-print js::build_tag(JQUERY_UI_URL_JS);
+#print js::build_tag(JQUERY_LIB_URL_JS);
+#print js::build_tag(JQUERY_UI_URL_JS);
+print js::build_tag(DEDALO_CORE_URL . '/dd/jquery/dist/jquery.min.js');
+print js::build_tag(DEDALO_CORE_URL . '/dd/jquery/dist/jquery-ui.min.js');
 print js::build_tag(DEDALO_CORE_URL . '/common/js/cookies.js');
 print js::build_tag(DEDALO_CORE_URL . '/menu/js/menu.js');
 #print js::build_tag(DEDALO_CORE_URL . '/login/js/login.js');
